[options.entry_points]
console_scripts =
    hello_world = crazyflie_examples.hello_world:main
    nice_hover = crazyflie_examples.nice_hover:main
    figure8 = crazyflie_examples.figure8:main
    multi_trajectory = crazyflie_examples.multi_trajectory:main
    cmd_full_state = crazyflie_examples.cmd_full_state:main
    set_param = crazyflie_examples.set_param:main
    brown_pos = crazyflie_examples.brown_pos:main
    test_traj = crazyflie_examples.test_trajectory:main
    manipulate = crazyflie_examples.manipulate:main
    test_firmware = crazyflie_examples.test_firmware:main
    trajectories = crazyflie_examples.trajectories:main
    multi_figure8 = crazyflie_examples.intersection_figure8:main
